# django-newsletter

./: MANIFEST.in  README.rst  setup.cfg
django-newsletter/: README.md  manage.py
django-newsletter/Newsletter/: asgi.py  models.py  settings.py  views.py  wsgi.py
django-newsletter/Newsletter/migrations/: 0001_initial.py
django-newsletter/Newsletter/templates/newsletter/: mail.html
django-newsletter/core/: settings.py  wsgi.py
django-newsletter/src/: admin.py  views.py
django-newsletter/src/migrations/: 0001_initial.py  0002_subscriptionmessage_sent.py  0003_auto_20230313_1416.py
