[metadata]
name = django-newsletter
version = 2.0
description = A django app for automatically sending mails to users.
long_description = file: README.rst
url = https://github.com/codewitgabi/django-newsletter
author = Gabriel Michael Ojomakpene
author_email = codewitgabi222@gmail.com
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2  # Replace "X.Y" as appropriate
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.9
install_requires =
    Django >= 3.2